--- a/frontend/cmd/server/templates/base.gohtml
+++ b/frontend/cmd/server/templates/base.gohtml
@@ -17,6 +17,7 @@
         <a class="text-indigo-600 hover:underline" href="/playlists">Playlists</a>
         <a class="text-indigo-600 hover:underline" href="/event">Event</a>
         <a class="text-indigo-600 hover:underline" href="/realtime">Realtime</a>
+        <a class="text-indigo-600 hover:underline" href="/me">Me</a>
         <div class="ml-auto text-xs text-slate-500">API: {{ .API }} &nbsp; WS: {{ .WS }}</div>
       </div>
     </header>
